--- a/demo/gitlab.yaml
+++ b/demo/gitlab.yaml
@@ -1,10 +1,14 @@
-<%
-$azs = MU::Cloud::AWS.listAZs
-$azs.delete $azskip if $azskip
-current_vpc = MU.myVPC
-%>
 ---
-appname: demo
+  parameters:
+  - name: appname
+    default: demo
+  - name: instance_type
+    default: t2.xlarge #t2.micro
+  - name: vpc
+    cloudtype: AWS::EC2::VPC::Id
+    default: <%= MU.myVPC %>
+---
+appname: <%= appname %>
 servers:
   -
     name: gitlab
@@ -12,24 +16,18 @@ servers:
     platform: ubuntu
     storage:
       -
-        size: 15
+        size: 16
     skipinitialupdates: true
-    #size: t2.micro
-    size: t2.xlarge
+    size: <%= instance_type %>
     run_list:
     - recipe[demo::gitlab]
     - recipe[demo::gitlab_runner]
     associate_public_ip: true
     static_ip: 
       assign_ip: true
-    vpc:
-    <% if $vpc_deploy_id %>
-      deploy_id: <%= $vpc_deploy_id %>
-    <% elsif $use_current %>
-      vpc_id: <%= current_vpc %>
-    <% else %>
-      vpc_name: vpc
-    <% end %>
+      vpc:
+        vpc_id: <%= vpc %>
+        subnet_pref: public
     ingress_rules:
       -
         port: 80
@@ -39,19 +37,3 @@ servers:
         port: 443
         hosts:
           - "0.0.0.0/0"
-<% unless $use_current or $vpc_deploy_id then %>
-vpcs:
-- name: vpc
-  route-tables:
-  - name: internet
-    routes:
-    - destination_network: 0.0.0.0/0
-      gateway: "#INTERNET"
-  subnets:
-<% $azs.each.with_index do |az, i| %>
-  - name: Subnet<%= i %>Public
-    ip_block: 10.0.<%= i %>.0/24
-    availability-zone: "<%= az %>"
-    route-table: internet
-<% end %>
-<% end %>
