--- a/demo/gitlab-runner.yaml
+++ b/demo/gitlab-runner.yaml
@@ -12,7 +12,7 @@
   appname: <%= appname %>
   servers: 
     - 
-      name: gitlab
+      name: gitlab-runner
       size: <%= instance_type %>
       platform: ubuntu
       storage:
