--- a/demo/gitlab.yaml
+++ b/demo/gitlab.yaml
@@ -36,3 +36,16 @@
         port: 80
         hosts:
           - "0.0.0.0/0"
+    - 
+      name: gitlab-runner
+      size: <%= instance_type %>
+      platform: ubuntu
+      storage:
+      -
+        size: 16
+      skipinitialupdates: true
+      run_list:
+        - recipe[demo::gitlab_runner]
+      vpc:
+        vpc_id: <%= vpc %>
+        subnet_pref: public
