--- a/demo/gitlab-runner.yaml
+++ b/demo/gitlab-runner.yaml
@@ -12,9 +12,22 @@
   appname: <%= appname %>
   servers: 
     - 
-      name: gitlab-runner
+      name: gitlab-runner-debian
       size: <%= instance_type %>
       platform: ubuntu
+      storage:
+      -
+        size: 16
+      skipinitialupdates: true
+      run_list:
+        - recipe[demo::gitlab_runner]
+      vpc:
+        vpc_id: <%= vpc %>
+        subnet_pref: public
+    - 
+      name: gitlab-runner-rhel
+      size: <%= instance_type %>
+      platform: centos7
       storage:
       -
         size: 16
