--- a/demo/gitlab.yaml
+++ b/demo/gitlab.yaml
@@ -36,3 +36,39 @@
         port: 80
         hosts:
           - "0.0.0.0/0"
+    - 
+      name: gitlab-runner-D
+      size: <%= instance_type %>
+      platform: ubuntu
+      storage:
+      -
+        size: 16
+      skipinitialupdates: true
+      run_list:
+        - recipe[demo::gitlab_runner]
+      vpc:
+        vpc_id: <%= vpc %>
+        subnet_pref: public
+      dependencies:
+      -
+        name: "gitlab"
+        phase: "groom"
+        type: "server"
+    - 
+      name: gitlab-runner-R
+      size: <%= instance_type %>
+      platform: centos
+      storage:
+      -
+        size: 16
+      skipinitialupdates: true
+      run_list:
+        - recipe[demo::gitlab_runner]
+      vpc:
+        vpc_id: <%= vpc %>
+        subnet_pref: public
+      dependencies:
+      -
+        name: "gitlab"
+        phase: "groom"
+        type: "server"
