--- a/demo/gitlab-runner.yaml
+++ b/demo/gitlab-runner.yaml
@@ -15,6 +15,7 @@
       name: gitlab-runner-D
       size: <%= instance_type %>
       platform: ubuntu
+      count: 2
       storage:
       -
         size: 16
@@ -28,6 +29,19 @@
       name: gitlab-runner-R
       size: <%= instance_type %>
       platform: centos
+      storage:
+      -
+        size: 16
+      skipinitialupdates: true
+      run_list:
+        - recipe[demo::gitlab_runner]
+      vpc:
+        vpc_id: <%= vpc %>
+        subnet_pref: public
+    - 
+      name: gitlab-runner-W
+      size: <%= instance_type %>
+      platform: windows
       storage:
       -
         size: 16
